test/files/neg/t9849.check
t9849.scala:14: error: method h in object O cannot be accessed as a member of object p.O
  O.h()
    ^
t9849.scala:15: error: method h$default$1 in object O cannot be accessed as a member of object p.O
  O.h$default$1
    ^
two errors found
